cmake_minimum_required (VERSION 2.6)
project (gtest)
set(dir ${CMAKE_CURRENT_SOURCE_DIR}/compile/)
set(EXECUTABLE_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
set(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${dir})
set(CMAKE_BUILD_FILES_DIRECTORY ${dir})
set(CMAKE_BUILD_DIRECTORY ${dir})
set(CMAKE_BINARY_DIR  ${dir})
SET(EXECUTABLE_OUTPUT_PATH ${dir})
SET(LIBRARY_OUTPUT_PATH ${dir}lib)
SET(CMAKE_CACHEFILE_DIR ${dir})
if(CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-std=gnu++11)
    message(STATUS "optional:-std=gnu++11")   
endif(CMAKE_COMPILER_IS_GNUCXX)
add_subdirectory (src)
add_subdirectory (ut)
