cmake_minimum_required (VERSION 2.6)
project (gtest)

if(CMAKE_COMPILER_IS_GNUCXX)
    add_compile_options(-std=gnu++11 -g)
    message(STATUS "optional:-std=gnu++11")   
endif(CMAKE_COMPILER_IS_GNUCXX)
set(gtest_root ${CMAKE_SOURCE_DIR}/external/googletest)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/ CACHE PATH "Build directory" FORCE)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/ CACHE PATH "Build directory" FORCE)
add_subdirectory (${gtest_root})
add_subdirectory (src)
add_subdirectory (ut)
